--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hey There!!
-        </div>
+    		<h1>A new heading</h1>
+	</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
