--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -5,6 +5,8 @@
     
     </head>
     <body>
+        
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -19,6 +21,7 @@
             <p>
                 This is the content of my second article
             </p>
+        </div>
         </div>
     </body>
 </html>
