--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -5,6 +5,7 @@
     
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -19,6 +20,7 @@
             <p>
                 This is the content of my third article
             </p>
+        </div>
         </div>
     </body>
 </html>
