--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        
+        <link href="/ui/style.css" rel="stylesheet" />
         <title>Article One</title>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         
